--- a/src/app/scss/base/_typography.scss
+++ b/src/app/scss/base/_typography.scss
@@ -43,7 +43,7 @@
 );
 
 body {
-    font-family: "SpaceMono", "sans-serif";
+    font-family: "SpaceMono", monospace;
     font-display: swap;
     font-size: 12px;
     line-height: 14px;
